Bug 847211: When reparenting style contexts, skip flex-item style fixup if our element is the root of an anonymous subtree. r=bz